Code/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    INT

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM VAR_IDENTIFIER SEP_LCBRACKET pr_a pr_b main_func SEP_RCBRACKET
Rule 2     pr_a -> vars pr_a
Rule 3     pr_a -> epsilon
Rule 4     pr_b -> function pr_b
Rule 5     pr_b -> epsilon
Rule 6     main_func -> LIGHT_TOKEN SEP_LPAR SEP_RPAR SEP_LCBRACKET m_a SEP_RCBRACKET
Rule 7     m_a -> statement m_a
Rule 8     m_a -> epsilon
Rule 9     type -> primitive
Rule 10    type -> figure
Rule 11    type -> epsilon
Rule 12    primitive -> VAR_BOOLEAN
Rule 13    primitive -> VAR_INT
Rule 14    primitive -> VAR_DECIMAL
Rule 15    primitive -> VAR_STRING
Rule 16    primitive -> VAR_FRACTION
Rule 17    figure -> POINT
Rule 18    figure -> LINE
Rule 19    figure -> TRIANGLE
Rule 20    figure -> SQUARE
Rule 21    figure -> RECTANGLE
Rule 22    figure -> POLYGON
Rule 23    figure -> STAR
Rule 24    figure -> CIRCLE
Rule 25    function -> FUNCTION VAR_IDENTIFIER SEP_LPAR func_a SEP_RPAR func_b SEP_LCBRACKET func_c stmt_loop SEP_RCBRACKET
Rule 26    func_a -> parameters
Rule 27    func_a -> epsilon
Rule 28    func_b -> RETURNS type
Rule 29    func_b -> epsilon
Rule 30    func_c -> vars func_c
Rule 31    func_c -> epsilon
Rule 32    stmt_loop -> statement stmt_loop
Rule 33    stmt_loop -> epsilon
Rule 34    parameters -> VAR_IDENTIFIER SEP_COLON type param_a
Rule 35    param_a -> SEP_COMMA
Rule 36    param_a -> epsilon
Rule 37    assignment -> VAR_IDENTIFIER OP_EQUALS exp
Rule 38    cycle -> loop cyc_a
Rule 39    cycle -> for_each cyc_a
Rule 40    cycle -> for cyc_a
Rule 41    cyc_a -> do_block
Rule 42    loop -> LOOP SEP_LPAR l_a SEP_DOT SEP_DOT l_a SEP_RPAR do_block
Rule 43    l_a -> VAR_INT
Rule 44    l_a -> VAR_IDENTIFIER
Rule 45    for_each -> FOR_EACH SEP_LPAR VAR_IDENTIFIER IN fore_a SEP_RPAR SEP_LCBRACKET stmt_loop SEP_RCBRACKET
Rule 46    fore_a -> VAR_IDENTIFIER
Rule 47    for -> FOR SEP_LPAR for_a SEP_SEMICOLON condition SEP_SEMICOLON for_b SEP_RPAR SEP_LCBRACKET stmt_loop SEP_RCBRACKET
Rule 48    for_a -> assignment
Rule 49    for_a -> epsilon
Rule 50    for_b -> increment
Rule 51    for_b -> assignment
Rule 52    action -> ACTION act_a
Rule 53    act_a -> act_move
Rule 54    act_a -> act_scale
Rule 55    act_a -> act_visible
Rule 56    act_a -> act_rotate
Rule 57    act_header -> VAR_IDENTIFIER DO BEGINS SEP_COLON exp SEP_COMMA ENDS SEP_COLON exp SEP_COMMA
Rule 58    act_move -> MOVE act_header POS_X SEP_COLON exp SEP_COMMA POS_Y SEP_COLON exp END
Rule 59    act_scale -> SCALE act_header SIZE SEP_COLON exp SEP_COMMA END
Rule 60    act_rotate -> SCALE act_header ANGLE SEP_COLON exp SEP_COMMA END
Rule 61    act_visible -> HIDE act_header END
Rule 62    act_visible -> SHOW act_header END
Rule 63    camera -> CAMERA VAR_IDENTIFIER
Rule 64    condition -> exp ex_a
Rule 65    condition -> exp
Rule 66    ex_a -> OP_LESS_THAN exp
Rule 67    ex_a -> OP_GREATER_THAN exp
Rule 68    ex_a -> OP_NOT_EQUAL exp
Rule 69    ex_a -> OP_EQUALS exp
Rule 70    ex_a -> OP_GREATER_EQUAL exp
Rule 71    ex_a -> OP_LESS_EQUAL exp
Rule 72    exp -> term exp_a
Rule 73    exp_a -> exp_b
Rule 74    exp_a -> epsilon
Rule 75    exp_b -> term exp_c exp_d
Rule 76    exp_c -> OP_PLUS
Rule 77    exp_c -> OP_MINUS
Rule 78    exp_d -> exp_b
Rule 79    exp_d -> epsilon
Rule 80    term -> factor term_a
Rule 81    term_a -> term_b
Rule 82    term_a -> epsilon
Rule 83    term_b -> factor term_c term_d
Rule 84    term_c -> OP_TIMES
Rule 85    term_c -> OP_DIVISION
Rule 86    term_d -> term_b
Rule 87    term_d -> epsilon
Rule 88    factor -> VAR_IDENTIFIER
Rule 89    factor -> cnt_prim
Rule 90    factor -> SEP_LPAR exp SEP_RPAR
Rule 91    increment -> VAR_IDENTIFIER inc_a exp
Rule 92    inc_a -> OP_PLUS_EQUALS
Rule 93    inc_a -> OP_MINUS_EQUALS
Rule 94    if -> IF condition_block if_a if_b
Rule 95    if_a -> elsif
Rule 96    if_a -> epsilon
Rule 97    if_b -> else
Rule 98    if_b -> epsilon
Rule 99    elsif -> ELSIF condition_block
Rule 100   else -> ELSE do_block
Rule 101   condition_block -> SEP_LPAR condition SEP_RPAR do_block
Rule 102   do_block -> DO stmt_loop END
Rule 103   statement -> assignment
Rule 104   statement -> if
Rule 105   statement -> cycle
Rule 106   statement -> action
Rule 107   statement -> camera
Rule 108   statement -> comments
Rule 109   statement -> print
Rule 110   statement -> figure_creations
Rule 111   statement -> return
Rule 112   var_a -> VAR_IDENTIFIER var_b
Rule 113   var_b -> SEP_COMMA var_a
Rule 114   var_b -> epsilon
Rule 115   vars -> vars_start v_a
Rule 116   v_a -> vars_figs
Rule 117   v_a -> vars_prim
Rule 118   vars_start -> VAR vs_a SEP_COLON
Rule 119   vs_a -> VAR_IDENTIFIER vs_b
Rule 120   vs_b -> SEP_COMMA vs_a
Rule 121   vs_b -> epsilon
Rule 122   vars_figs -> figure vf_a
Rule 123   vf_a -> init_fig
Rule 124   vf_a -> epsilon
Rule 125   vars_prim -> primitive var_p_a
Rule 126   var_p_a -> init_prim
Rule 127   var_p_a -> epsilon
Rule 128   init_prim -> OP_EQUALS init_a
Rule 129   init_a -> VAR_IDENTIFIER
Rule 130   init_a -> cnt_prim
Rule 131   init_fig -> OP_EQUALS VAR_IDENTIFIER
Rule 132   init_fig -> HAS fig_create_block
Rule 133   fig_create_block -> fig_a END
Rule 134   fig_a -> fig_attr fig_b
Rule 135   fig_b -> SEP_COMMA fig_a
Rule 136   fig_b -> epsilon
Rule 137   fig_attr -> vector
Rule 138   fig_attr -> COLOR SEP_COLON VAR_IDENTIFIER
Rule 139   fig_attr -> SIZE SEP_COLON exp
Rule 140   vector -> VAR_VECTORID SEP_COLON SEP_LPAR exp SEP_COMMA exp SEP_RPAR
Rule 141   cnt_prim -> VAR_INT
Rule 142   cnt_prim -> VAR_DECIMAL
Rule 143   cnt_prim -> VAR_FRACTION
Rule 144   return -> RETURN exp
Rule 145   comments -> SEP_HASHTAG co_a
Rule 146   co_a -> VAR_ANYCHAR co_a
Rule 147   co_a -> epsilon
Rule 148   print -> PRINT SEP_LPAR prin_a SEP_RPAR
Rule 149   prin_a -> exp
Rule 150   prin_a -> VAR_STRING
Rule 151   figure_creations -> VAR VAR_IDENTIFIER SEP_COLON figure HAS fig_create_block
Rule 152   epsilon -> <empty>

Terminals, with rules where they appear

ACTION               : 52
ANGLE                : 60
BEGINS               : 57
CAMERA               : 63
CIRCLE               : 24
COLOR                : 138
DO                   : 57 102
ELSE                 : 100
ELSIF                : 99
END                  : 58 59 60 61 62 102 133
ENDS                 : 57
FOR                  : 47
FOR_EACH             : 45
FUNCTION             : 25
HAS                  : 132 151
HIDE                 : 61
IF                   : 94
IN                   : 45
INT                  : 
LIGHT_TOKEN          : 6
LINE                 : 18
LOOP                 : 42
MOVE                 : 58
OP_DIVISION          : 85
OP_EQUALS            : 37 69 128 131
OP_GREATER_EQUAL     : 70
OP_GREATER_THAN      : 67
OP_LESS_EQUAL        : 71
OP_LESS_THAN         : 66
OP_MINUS             : 77
OP_MINUS_EQUALS      : 93
OP_NOT_EQUAL         : 68
OP_PLUS              : 76
OP_PLUS_EQUALS       : 92
OP_TIMES             : 84
POINT                : 17
POLYGON              : 22
POS_X                : 58
POS_Y                : 58
PRINT                : 148
PROGRAM              : 1
RECTANGLE            : 21
RETURN               : 144
RETURNS              : 28
SCALE                : 59 60
SEP_COLON            : 34 57 57 58 58 59 60 118 138 139 140 151
SEP_COMMA            : 35 57 57 58 59 60 113 120 135 140
SEP_DOT              : 42 42
SEP_HASHTAG          : 145
SEP_LCBRACKET        : 1 6 25 45 47
SEP_LPAR             : 6 25 42 45 47 90 101 140 148
SEP_RCBRACKET        : 1 6 25 45 47
SEP_RPAR             : 6 25 42 45 47 90 101 140 148
SEP_SEMICOLON        : 47 47
SHOW                 : 62
SIZE                 : 59 139
SQUARE               : 20
STAR                 : 23
TRIANGLE             : 19
VAR                  : 118 151
VAR_ANYCHAR          : 146
VAR_BOOLEAN          : 12
VAR_DECIMAL          : 14 142
VAR_FRACTION         : 16 143
VAR_IDENTIFIER       : 1 25 34 37 44 45 46 57 63 88 91 112 119 129 131 138 151
VAR_INT              : 13 43 141
VAR_STRING           : 15 150
VAR_VECTORID         : 140
error                : 

Nonterminals, with rules where they appear

act_a                : 52
act_header           : 58 59 60 61 62
act_move             : 53
act_rotate           : 56
act_scale            : 54
act_visible          : 55
action               : 106
assignment           : 48 51 103
camera               : 107
cnt_prim             : 89 130
co_a                 : 145 146
comments             : 108
condition            : 47 101
condition_block      : 94 99
cyc_a                : 38 39 40
cycle                : 105
do_block             : 41 42 100 101
else                 : 97
elsif                : 95
epsilon              : 3 5 8 11 27 29 31 33 36 49 74 79 82 87 96 98 114 121 124 127 136 147
ex_a                 : 64
exp                  : 37 57 57 58 58 59 60 64 65 66 67 68 69 70 71 90 91 139 140 140 144 149
exp_a                : 72
exp_b                : 73 78
exp_c                : 75
exp_d                : 75
factor               : 80 83
fig_a                : 133 135
fig_attr             : 134
fig_b                : 134
fig_create_block     : 132 151
figure               : 10 122 151
figure_creations     : 110
for                  : 40
for_a                : 47
for_b                : 47
for_each             : 39
fore_a               : 45
func_a               : 25
func_b               : 25
func_c               : 25 30
function             : 4
if                   : 104
if_a                 : 94
if_b                 : 94
inc_a                : 91
increment            : 50
init_a               : 128
init_fig             : 123
init_prim            : 126
l_a                  : 42 42
loop                 : 38
m_a                  : 6 7
main_func            : 1
param_a              : 34
parameters           : 26
pr_a                 : 1 2
pr_b                 : 1 4
primitive            : 9 125
prin_a               : 148
print                : 109
program              : 0
return               : 111
statement            : 7 32
stmt_loop            : 25 32 45 47 102
term                 : 72 75
term_a               : 80
term_b               : 81 86
term_c               : 83
term_d               : 83
type                 : 28 34
v_a                  : 115
var_a                : 113
var_b                : 112
var_p_a              : 125
vars                 : 2 30
vars_figs            : 116
vars_prim            : 117
vars_start           : 115
vector               : 137
vf_a                 : 122
vs_a                 : 118 120
vs_b                 : 119

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM VAR_IDENTIFIER SEP_LCBRACKET pr_a pr_b main_func SEP_RCBRACKET

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . VAR_IDENTIFIER SEP_LCBRACKET pr_a pr_b main_func SEP_RCBRACKET

    VAR_IDENTIFIER  shift and go to state 3


state 3

    (1) program -> PROGRAM VAR_IDENTIFIER . SEP_LCBRACKET pr_a pr_b main_func SEP_RCBRACKET

    SEP_LCBRACKET   shift and go to state 4


state 4

    (1) program -> PROGRAM VAR_IDENTIFIER SEP_LCBRACKET . pr_a pr_b main_func SEP_RCBRACKET
    (2) pr_a -> . vars pr_a
    (3) pr_a -> . epsilon
    (115) vars -> . vars_start v_a
    (152) epsilon -> .
    (118) vars_start -> . VAR vs_a SEP_COLON

    FUNCTION        reduce using rule 152 (epsilon -> .)
    LIGHT_TOKEN     reduce using rule 152 (epsilon -> .)
    VAR             shift and go to state 9

    vars                           shift and go to state 5
    epsilon                        shift and go to state 6
    pr_a                           shift and go to state 7
    vars_start                     shift and go to state 8

state 5

    (2) pr_a -> vars . pr_a
    (2) pr_a -> . vars pr_a
    (3) pr_a -> . epsilon
    (115) vars -> . vars_start v_a
    (152) epsilon -> .
    (118) vars_start -> . VAR vs_a SEP_COLON

    FUNCTION        reduce using rule 152 (epsilon -> .)
    LIGHT_TOKEN     reduce using rule 152 (epsilon -> .)
    VAR             shift and go to state 9

    vars                           shift and go to state 5
    epsilon                        shift and go to state 6
    pr_a                           shift and go to state 10
    vars_start                     shift and go to state 8

state 6

    (3) pr_a -> epsilon .

    FUNCTION        reduce using rule 3 (pr_a -> epsilon .)
    LIGHT_TOKEN     reduce using rule 3 (pr_a -> epsilon .)


state 7

    (1) program -> PROGRAM VAR_IDENTIFIER SEP_LCBRACKET pr_a . pr_b main_func SEP_RCBRACKET
    (4) pr_b -> . function pr_b
    (5) pr_b -> . epsilon
    (25) function -> . FUNCTION VAR_IDENTIFIER SEP_LPAR func_a SEP_RPAR func_b SEP_LCBRACKET func_c stmt_loop SEP_RCBRACKET
    (152) epsilon -> .

    FUNCTION        shift and go to state 12
    LIGHT_TOKEN     reduce using rule 152 (epsilon -> .)

    function                       shift and go to state 11
    epsilon                        shift and go to state 13
    pr_b                           shift and go to state 14

state 8

    (115) vars -> vars_start . v_a
    (116) v_a -> . vars_figs
    (117) v_a -> . vars_prim
    (122) vars_figs -> . figure vf_a
    (125) vars_prim -> . primitive var_p_a
    (17) figure -> . POINT
    (18) figure -> . LINE
    (19) figure -> . TRIANGLE
    (20) figure -> . SQUARE
    (21) figure -> . RECTANGLE
    (22) figure -> . POLYGON
    (23) figure -> . STAR
    (24) figure -> . CIRCLE
    (12) primitive -> . VAR_BOOLEAN
    (13) primitive -> . VAR_INT
    (14) primitive -> . VAR_DECIMAL
    (15) primitive -> . VAR_STRING
    (16) primitive -> . VAR_FRACTION

    POINT           shift and go to state 21
    LINE            shift and go to state 30
    TRIANGLE        shift and go to state 22
    SQUARE          shift and go to state 17
    RECTANGLE       shift and go to state 32
    POLYGON         shift and go to state 19
    STAR            shift and go to state 27
    CIRCLE          shift and go to state 25
    VAR_BOOLEAN     shift and go to state 24
    VAR_INT         shift and go to state 26
    VAR_DECIMAL     shift and go to state 15
    VAR_STRING      shift and go to state 23
    VAR_FRACTION    shift and go to state 29

    primitive                      shift and go to state 16
    vars_prim                      shift and go to state 18
    figure                         shift and go to state 20
    v_a                            shift and go to state 28
    vars_figs                      shift and go to state 31

state 9

    (118) vars_start -> VAR . vs_a SEP_COLON
    (119) vs_a -> . VAR_IDENTIFIER vs_b

    VAR_IDENTIFIER  shift and go to state 34

    vs_a                           shift and go to state 33

state 10

    (2) pr_a -> vars pr_a .

    FUNCTION        reduce using rule 2 (pr_a -> vars pr_a .)
    LIGHT_TOKEN     reduce using rule 2 (pr_a -> vars pr_a .)


state 11

    (4) pr_b -> function . pr_b
    (4) pr_b -> . function pr_b
    (5) pr_b -> . epsilon
    (25) function -> . FUNCTION VAR_IDENTIFIER SEP_LPAR func_a SEP_RPAR func_b SEP_LCBRACKET func_c stmt_loop SEP_RCBRACKET
    (152) epsilon -> .

    FUNCTION        shift and go to state 12
    LIGHT_TOKEN     reduce using rule 152 (epsilon -> .)

    function                       shift and go to state 11
    epsilon                        shift and go to state 13
    pr_b                           shift and go to state 35

state 12

    (25) function -> FUNCTION . VAR_IDENTIFIER SEP_LPAR func_a SEP_RPAR func_b SEP_LCBRACKET func_c stmt_loop SEP_RCBRACKET

    VAR_IDENTIFIER  shift and go to state 36


state 13

    (5) pr_b -> epsilon .

    LIGHT_TOKEN     reduce using rule 5 (pr_b -> epsilon .)


state 14

    (1) program -> PROGRAM VAR_IDENTIFIER SEP_LCBRACKET pr_a pr_b . main_func SEP_RCBRACKET
    (6) main_func -> . LIGHT_TOKEN SEP_LPAR SEP_RPAR SEP_LCBRACKET m_a SEP_RCBRACKET

    LIGHT_TOKEN     shift and go to state 37

    main_func                      shift and go to state 38
